--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ body {
 }
 
 .hike-span {
- color: plum;
+ color: rgb(86, 124, 228);
 }
 
 .hero-desc h2 {
@@ -174,4 +174,52 @@ body {
  border: 2px solid white;
  border-radius: 50%;
  position: absolute;
+
+ /*Assit in centering the cursor*/
+ transform: translate(-50%, -50%);
+
+ /*Remove pointer events*/
+ pointer-events: none;
+
+ /*Transition on hover*/
+ transition: all 0.5s ease-in-out;
+ transition-property: background, transfrom;
+ transform-origin: 75% 75%;
+}
+
+.cursor.nav-active {
+ background: rgb(86, 124, 228);
+ transform: scale(3);
+}
+
+.cursor.explore-active {
+ background: white;
+ transform: scale(3);
+}
+
+.cursor-text {
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ font-size: 0.5rem;
+ transform: translate(-50%, -50%);
+}
+
+.title {
+ position: relative;
+ overflow: hidden;
+}
+
+.title-swipe {
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ top: 0;
+ left: 0;
+ mix-blend-mode: darken;
+ transform: translateY(100%);
+}
+
+.t-swipe1 {
+ background: rgb(86, 124, 228);
 }
